fix single product layout on safari

--- a/wp-content/themes/zephyr/src/styles/base/mixins.scss
+++ b/wp-content/themes/zephyr/src/styles/base/mixins.scss
@@ -393,7 +393,7 @@
   @if($min) {
     min-height: $height;
 
-    @include mq-min($bp) {
+    @include mq-min($bp-md) {
       min-height: $height-lg;
     }
   } @else {
